broker/broker-deploy.yaml
---
# Main Broker deployment.  This is reentrant so should be able to be scaled
# horizontally for HA.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cfmr-service-broker
  namespace: cfmr-broker
  labels:
    app: cfmr-service-broker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cfmr-service-broker
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cfmr-service-broker
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - cfmr-service-broker
              topologyKey: "kubernetes.io/hostname"
      containers:
      - args:
        - -logtostderr
        - -v
        - "0"
        # This may be either 'basic' (for username/password), or token (for bearer token)
        # If you change this, then you also need to update the authentication type defined
        # in clusterservicebroker.yaml
        - -authentication=basic
        - -token=/var/run/secrets/cfmr-service-broker/token
        - -username=/var/run/secrets/cfmr-service-broker/username
        - -password=/var/run/secrets/cfmr-service-broker/password
        - -tls-certificate=/var/run/secrets/cfmr-service-broker/tls-certificate
        - -tls-private-key=/var/run/secrets/cfmr-service-broker/tls-private-key
        - -config=cfmr-service-broker
        # This is for DEBUG ONLY - Turn off when not needed
        # - -v=1
        image: cp.icr.io/cp/ibm-cfmr/cfmr-service-broker:1.0.0
        imagePullPolicy: IfNotPresent
        name: cfmr-service-broker
        ports:
        - containerPort: 8443
          name: https
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /readyz
            scheme: HTTPS
            port: https
          initialDelaySeconds: 3
          periodSeconds: 10
        volumeMounts:
        - mountPath: /var/run/secrets/cfmr-service-broker
          name: cfmr-service-broker
          readOnly: true
      imagePullSecrets:
      - name: prod-entitled-registry
      serviceAccountName: cfmr-service-broker
      volumes:
      - name: cfmr-service-broker
        secret:
          secretName: cfmr-service-broker
---
# The Broker is exposed to the Service Catalog with a Service.
apiVersion: v1
kind: Service
metadata:
  name: cfmr-service-broker
  namespace: cfmr-broker
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: cfmr-service-broker
